# tester

./: .context.json  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.flow/: config.yml  flow.py
.flow/cmake/: common.cmake
.flow/extensions/tester/: bug_report.py
.flow/extensions/tester/icons/: __init__.py
.flow/extensions/wall/icons/: __init__.py  magick.py
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md
.github/workflows/: build.yml
action/bootstrap/: action.yml  version.py
action/proj-flow-version/: action.yml
actions/bootstrap/: action.yml
actions/get-wix/: action.yml
actions/run-steps/: action.yml  proj_matrix.py
src/: main.cpp  version.hpp.in
tests/: test.cpp
